--- a/index-zh.adoc
+++ b/index-zh.adoc
@@ -30,10 +30,8 @@ v0.1, February 9, 2018: Initial Import
 本标准按照GB/T 1.1 2009的规则编写。
 //This standard is authored in accordance with GB/T 1.1-2009.
 
-本标准由{gb-standard-proposer-zh}提出。
+本标准由{technical-committee-zh}提出并归口。
 //This standard is proposed by the State Cryptographic Administration of China.
-
-本标准由{technical-committee-zh}归口。
 //This standard is managed by the National Information Security Standardization
 //Technical Committee (SAC/TC 260).
 
