Update to Metanorma

--- a/gmt-0009-2012-zh.adoc
+++ b/gmt-0009-2012-zh.adoc
@@ -1,6 +1,4 @@
 = GM/T 0009-2012 SM2 Cryptographic Algorithm Application Specification
-Ronald Tse <ronald.tse@ribose.com>
-v0.1, February 9, 2018: Initial Import
 :docnumber: 0009
 :edition: 1
 :revdate: 2012-11-22
@@ -10,16 +8,18 @@ v0.1, February 9, 2018: Initial Import
 :title-main-zh: SM2密码算法使用规范
 :title-main-en: SM2 cryptography algorithm application specification
 :published-date: 2012-11-22
-:activated-date: 2012-11-22
-:technical-committee-number: 260
+:implemented-date: 2012-11-22
 :technical-committee-type: technical
-:technical-committee: State Cryptographic Administration of China
-:technical-committee-zh: 国家密码管理局
 :library-ics: 35.040
 :library-ccs: L80
 :scope: sector
-:prefix: GM
+:topic: method
+:prefix: GM/T
 :mandate: recommended
+:library-ics: 35.040
+:library-ccs: L80
+:proposer: 国家密码管理局
+:authority: 国家密码管理局
 :stem:
 
 :sectnums!:
